fix style for stuck orai

--- a/src/pages/BalanceNew/StuckOraib/style.module.scss
+++ b/src/pages/BalanceNew/StuckOraib/style.module.scss
@@ -1,5 +1,9 @@
 @import 'src/styles/mixins';
 
+.icon{
+    margin-right: 20px;
+}
+
 .bridgeBalances {
     padding: 9px 12px;
     border-radius: 8px;
